Fixed horizontal scroll

--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
     background-size: cover;
     background-position: right;
     width: 64vw;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+    /*box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;*/
 }
 
 .logo {
@@ -66,6 +66,6 @@
 
 @media only screen and (min-width: 426px) {
     .small_hero {
-        margin: 13vh 0 0 0;
+        margin: 11vh 0 0 0;
     }
 }
